--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="action_settings">Settings</string>
     <string name="action_add">Add</string>
     <string name="action_refresh">Refresh</string>
-
+    <string name="tab_title_1">Channels</string>
+    <string name="tab_title_2">New</string>
+    <string name="tab_title_3">Player</string>
+    <string name="tab_title_4">Download</string>
 </resources>
